# mfdnn

./: .gitignore  .mise.toml  pyproject.toml  requirments.txt
hw1/: conv1D.py  hw1.ipynb
hw10/: hw10.html  hw10.ipynb  hw10redo.html  hw10redo.ipynb
hw11/: hw11.html  hw11.ipynb
hw12/: hw12.html  hw12.ipynb
hw2/: hw2.html  hw2.ipynb
hw3/: 2022.py  hw3-2.html  hw3.html  hw3.ipynb  threelayerSGD.py
hw4/: hw4.html  hw4.ipynb
hw5/: hw5.html  hw5.ipynb
hw6/: hw6-4.html  hw6-4.ipynb  hw6.html  hw6.ipynb
hw7/: LNiN.py  hw7-1.html  hw7-1.ipynb  hw7-2.html  hw7-2.ipynb  hw7.html  hw7.ipynb
hw8/: hw8-3.html  hw8-3.ipynb  hw8.html  hw8.ipynb
hw9/: hw9.html  hw9.ipynb
resources/: Chapter1 Code.ipynb  Chapter2 Code.ipynb  Chapter3 Code.ipynb  Chapter4 Code.ipynb  ChapterA Code.ipynb
