[tool.poetry]
name = "mfdnn"
version = "0.1.0"
description = ""
authors = ["MoonRainy21 <shmoon323@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = {url="https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp39-cp39-linux_x86_64.whl#sha256=dfea610362c0e2a5ff28d322d6aa65d65e03e1334996119a5a3770c7d1821ac4"}

numpy = "^1.24.4"
matplotlib = "^3.7.5"
scikit-learn = "^1.4.2"
torchvision = "^0.18.1"
ipython = "^8.12.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name="pytorch-cuda"
url="https://download.pytorch.org/whl/cu121"
priority="explicit"

[[tool.poetry.source]]
name="pytorch-cpu"
url="https://download.pytorch.org/whl/cpu"
priority="explicit"